force-app/main/default/objects/proh__ProcessingHub_Setting__c/proh__ProcessingHub_Setting__c.object-meta.xml
<CustomObject>
    <label>ProcessingHub Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProcessingHub Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>