force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Group_Id__c.field-meta.xml
<CustomField>
    <fullName>proh__Group_Id__c</fullName>
    <inlineHelpText>El ID del grupo del grupo chatter utilizado en la comunicación con ProcessingHub</inlineHelpText>
    <label>Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>