force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>proh__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>