force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Return_URL__c.field-meta.xml
<CustomField>
    <fullName>proh__Return_URL__c</fullName>
    <label>Return URL</label>
    <type>Url</type>
</CustomField>