force-app/main/default/objects/proh__ProcessingHub_Setting__c/fields/proh__Token_URL__c.field-meta.xml
<CustomField>
    <fullName>proh__Token_URL__c</fullName>
    <label>Token URL</label>
    <type>Url</type>
</CustomField>